fixed layout shift bug

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -161,6 +161,30 @@ body.__className_36bd41[data-scroll-locked="1"] {
   margin-right: auto !important;
 }
 
+body.__className_d65c78[data-scroll-locked="1"] {
+  overflow: auto !important;
+  overscroll-behavior: auto !important;
+  position: relative !important;
+  padding-left: 2rem !important;
+  padding-top: 0px !important;
+  padding-right: 2rem !important;
+  margin-left: auto !important;
+  margin-top: 0 !important;
+  margin-right: auto !important;
+}
+
+[data-scroll-locked="1"][style="pointer-events: none;"] {
+  overflow: auto !important;
+  overscroll-behavior: auto !important;
+  position: relative !important;
+  padding-left: 2rem !important;
+  padding-top: 0px !important;
+  padding-right: 2rem !important;
+  margin-left: auto !important;
+  margin-top: 0 !important;
+  margin-right: auto !important;
+}
+
 .formkit-background {
   z-index: -1;
 }
